--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,11 +15,15 @@ jobs:
     runs-on: windows-2019
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 4.5
+    
+    - name: check DOTNET 4.5 VERSION
+      run: pwsh -DOTNET/script.ps1
+
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
