--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 4.x
+        dotnet-version: 4.8
     
     - name: check DOTNET 4.5 VERSION
       run: pwsh -DOTNET/script.ps1
