--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,11 +15,13 @@ jobs:
     runs-on: windows-2019
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup .NET Framework
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 4.8
+        dotnet-version: 4.5.x
     
     - name: check DOTNET 4.5 VERSION
       run: pwsh -DOTNET/script.ps1
