--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      
+    - name: check DOTNET 4.5 VERSION
+      run: pwsh /script.ps1
 
     - name: Setup .NET Framework
       uses: actions/setup-dotnet@v3
