--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,13 +18,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
       
-    - name: check DOTNET 4.5 VERSION
-      run: pwsh /script.ps1
-
     - name: Setup .NET Framework
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 4.7.2
+      
+    - name: Perform a Pester test from the command-line
+      shell: pwsh
+      run: dotnet new globaljson --roll-forward feature
+    
+    - name: Perform a Pester test from the command-line
+      shell: pwsh
+      run: (Get-ItemPropertyValue -LiteralPath 'HKLM:SOFTWARE\Microsoft\NET Framework Setup\NDP\v4\Full' -Name Release) -ge 378389
+
     
     - name: check DOTNET 4.5 VERSION
       run: pwsh -DOTNET/script
