--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Setup .NET Framework
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 4.7.2
+        dotnet-version: 6.x
       
     - name: Perform a Pester test from the command-line
       shell: pwsh
