--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,13 +31,12 @@ jobs:
       shell: pwsh
       run: (Get-ItemPropertyValue -LiteralPath 'HKLM:SOFTWARE\Microsoft\NET Framework Setup\NDP\v4\Full' -Name Release) -ge 378389
 
+    - name: Move Folder
+      run: cd DotNet4.5-ApiGateway
     
-    - name: check DOTNET 4.5 VERSION
-      run: pwsh -DOTNET/script
-
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --framework net45
     - name: Test
       run: dotnet test --no-build --verbosity normal
