--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,6 +35,6 @@ jobs:
       run: cd DotNet4.5-ApiGateway
     
     - name: Build
-      run: dotnet build --framework net45
+      run: dotnet build
     - name: Test
       run: dotnet test --no-build --verbosity normal
