--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
       run: cd DotNet4.5-ApiGateway
       
     - name: pwd
-      run: pwd
+      run: ls
     
     - name: Build
       run: dotnet build
