--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
       run: (Get-ItemPropertyValue -LiteralPath 'HKLM:SOFTWARE\Microsoft\NET Framework Setup\NDP\v4\Full' -Name Release) -ge 378389
 
     - name: Move Folder
-      run: cd D:\a\DOTNET\DotNet4.5-ApiGateway
+      run: cd D:\a\DOTNET\DOTNET\DotNet4.5-ApiGateway
       
     - name: pwd
       run: ls
