--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,6 +40,9 @@ jobs:
     - name: Move Folder
       run: cd DotNet4.5-ApiGateway
       
+    - name: Depth
+      run: ls DotNet4.5-ApiGateway/
+      
     - name: pwd
       run: ls
     
