--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,6 +53,10 @@ jobs:
       run: pwd
     
     - name: Build
-      run: dotnet build
+      run: |
+        cd DotNet4.5-ApiGateway
+        msbuild /p:Configuration=Release ApiGateway.sln
+    
+      
     - name: Test
       run: dotnet test --no-build --verbosity normal
